# teamblue-e2-enigma2

./: configure.ac
.github/workflows/: enigma2.yml
data/: groupedservices  keymap.xml  menu.xml  setup.xml
data/display/: Makefile.am
data/display/display128/: Makefile.am
data/display/display390/: Makefile.am
data/display/display96/: skin_display.xml
data/skin_default/: skin.xml
lib/actions/: action.cpp  parseactions.py
lib/base/: cfile.cpp  cfile.h  eerror.cpp  eptrlist.h  wrappers.cpp
lib/driver/: Makefile.inc  hdmi_cec.cpp
lib/dvb/: Makefile.inc  db.cpp  db.h  decoder.cpp  demux.cpp  dvb.cpp  dvb.h  dvbtime.cpp  dvbtime.h  epgtransponderdatareader.cpp  frontend.cpp  frontend.h  idvb.h  pmt.h  pvrparse.cpp  sec.cpp  sec.h  volume.cpp
lib/dvb_ci/: dvbci.cpp  dvbci.h
lib/gdi/: accel.cpp  epng.cpp  epng.h  fb.cpp  fblcd.h  font.cpp  gfbdc.cpp  gpixmap.cpp  gpixmap.h  grc.cpp  grc.h  lcd.cpp  picload.cpp  picload.h
lib/gui/: elabel.cpp  epixmap.cpp
lib/python/: Navigation.py  RecordTimer.py  ServiceReference.py  StartEnigma.py  enigma_python.i  python_console.i  skin.py
lib/python/Components/: AVSwitch.py  About.py  Console.py  ImportChannels.py  Lcd.py  Makefile.am  NimManager.py  SystemInfo.py  UsageConfig.py  VariableText.py  config.py
lib/python/Plugins/: Plugin.py
lib/python/Screens/: About.py  AudioSelection.py  (+17 more)
lib/service/: iservice.h  listboxservice.cpp  servicedvb.cpp  servicedvbrecord.cpp  servicehdmi.cpp  servicets.cpp  servicewebts.cpp
main/: Makefile.am  enigma.cpp
po/: de.po
tests/: enigma.py
tools/: enigma2.sh.in
(+13 files in other folders)
